add step to download csv and delete csv

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,9 @@ spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.main.allow-bean-definition-overriding=true
+sftp.host=localhost
+sftp.port=21
+sftp.username=usuario
+sftp.password=usuario
+sftp.sessionTimeout=999999
+sftp.channelTimeout=999999
