--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,10 @@
             <version>3.21.0</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
