--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,14 @@ sftp.username=usuario
 sftp.password=usuario
 sftp.sessionTimeout=999999
 sftp.channelTimeout=999999
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=juan.fernandez@atmira.com
+spring.mail.password=Brothers21992
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
