--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ sftp.channelTimeout=999999
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=juan.fernandez@atmira.com
-spring.mail.password=Brothers21992
+spring.mail.username=xxxxx
+spring.mail.password=xxxxx
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
